# Configurator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  version.py
misc/: checklist.txt
src/: configurator.py
tests/: import_test_mod.py
